changes to pull user access level from DB