@@ -16,6 +16,7 @@
 
 package com.publicissapient.kpidashboard.apis.usermanagement.service.impl;
 
+import com.publicissapient.kpidashboard.apis.auth.service.AuthenticationService;
 import com.publicissapient.kpidashboard.apis.common.service.UserInfoService;
 import com.publicissapient.kpidashboard.apis.constant.Constant;
 import com.publicissapient.kpidashboard.apis.model.ServiceResponse;
@@ -65,40 +66,50 @@ class UserServiceImplTest {
     @Mock
     private Authentication authentication;
 
+    @Mock
+    private AuthenticationService authenticationService;
+
     private List<com.publicissapient.kpidashboard.common.model.application.HierarchyLevel> mockHierarchyLevels;
 
     @BeforeEach
     void setUp(){
         authentication = Mockito.mock(Authentication.class);
         securityContext = Mockito.mock(SecurityContext.class);
+       // userInfoService = Mockito.mock(UserInfoService.class);
 
     }
 
     @Test
     void testSaveUserInfo_NewUserForProjectAdmin() {
         String username = "testUser";
-        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
+        //Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(null);
+        /*doReturn(null)
+                .when(userInfoService)
+                .getUserInfo(anyString(), eq(AuthType.SAML));*/
+
+        ProjectsAccess access = getProjectAccess("project");
+
         List<GrantedAuthority> authorities = List.of(
                 (GrantedAuthority) () -> Constant.ROLE_PROJECT_ADMIN
         );
-        ProjectsAccess access = getProjectAccess("project");
-
+        when(userInfoService.getAuthorities(any())).thenReturn(authorities);
         UserInfo projectAdminUserInfo = new UserInfo();
         projectAdminUserInfo.setUsername("ProjectAdmin");
         projectAdminUserInfo.setProjectsAccess(List.of(access));
-        Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
-        when(userInfoService.getUserInfo(authentication.getName())).thenReturn(projectAdminUserInfo);
+
+        when(userInfoService.getUserInfo(authenticationService.getLoggedInUser())).thenReturn(projectAdminUserInfo);
 
         UserInfo savedUserInfo = new UserInfo();
         savedUserInfo.setUsername(username);
         savedUserInfo.setAuthType(AuthType.SAML);
         savedUserInfo.setAuthorities(new ArrayList<>());
         savedUserInfo.setEmailAddress("");
-        savedUserInfo.setProjectsAccess(Collections.emptyList());
+        savedUserInfo.setProjectsAccess(List.of(access));
 
-        when(userInfoService.save(any(UserInfo.class))).thenReturn(savedUserInfo);
+
+        when(userInfoService.save(any())).thenReturn(savedUserInfo);
 
         // Act
         ServiceResponse result = userService.saveUserInfo(username);
@@ -115,19 +126,14 @@ class UserServiceImplTest {
     @Test
     void testSaveUserInfo_NewUserForOtherUser() {
         String username = "testUser";
-        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(null);
-        List<GrantedAuthority> authorities = List.of(
-                (GrantedAuthority) () -> Constant.ROLE_GUEST
-        );
 
         ProjectsAccess access = getProjectAccess("project");
 
         UserInfo projectAdminUserInfo = new UserInfo();
         projectAdminUserInfo.setUsername("ProjectAdmin");
         projectAdminUserInfo.setProjectsAccess(List.of(access));
-        Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
 
         UserInfo savedUserInfo = new UserInfo();
         savedUserInfo.setUsername(username);
@@ -167,21 +173,14 @@ class UserServiceImplTest {
     @Test
     void testSaveUserInfo_NewUserForProjectAdmin1() {
         String username = "testUser";
-        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(null);
-        List<GrantedAuthority> authorities = List.of(
-                (GrantedAuthority) () -> Constant.ROLE_PROJECT_ADMIN
-        );
         ProjectsAccess access = getProjectAccess("acc");
 
         UserInfo projectAdminUserInfo = new UserInfo();
         projectAdminUserInfo.setUsername("ProjectAdmin");
         projectAdminUserInfo.setProjectsAccess(List.of(access));
-        Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
-        when(userInfoService.getUserInfo(authentication.getName())).thenReturn(projectAdminUserInfo);
         mockHierarchyLevels = createMockHierarchyLevels();
-        when(hierarchyLevelService.getTopHierarchyLevels()).thenReturn(mockHierarchyLevels);
 
         UserInfo savedUserInfo = new UserInfo();
         savedUserInfo.setUsername(username);
@@ -207,22 +206,14 @@ class UserServiceImplTest {
     @Test
     void testSaveUserInfo_NewUserForProjectAdminForAccess() {
         String username = "testUser";
-        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(null);
-        List<GrantedAuthority> authorities = List.of(
-                (GrantedAuthority) () -> Constant.ROLE_PROJECT_ADMIN
-        );
-
         ProjectsAccess access = getProjectAccess("port");
 
         UserInfo projectAdminUserInfo = new UserInfo();
         projectAdminUserInfo.setUsername("ProjectAdmin");
         projectAdminUserInfo.setProjectsAccess(List.of(access));
-        Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
-        when(userInfoService.getUserInfo(authentication.getName())).thenReturn(projectAdminUserInfo);
         mockHierarchyLevels = createMockHierarchyLevels();
-        when(hierarchyLevelService.getTopHierarchyLevels()).thenReturn(mockHierarchyLevels);
 
         UserInfo savedUserInfo = new UserInfo();
         savedUserInfo.setUsername(username);
@@ -251,15 +242,12 @@ class UserServiceImplTest {
     void testSaveUserInfo_NewUserForSuperAdmin() {
         // Arrange
         String username = "testUser";
-        Mockito.when(securityContext.getAuthentication()).thenReturn(authentication);
         SecurityContextHolder.setContext(securityContext);
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(null);
         List<GrantedAuthority> authorities = List.of(
                 (GrantedAuthority) () -> Constant.ROLE_SUPERADMIN
         );
-
-        Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
-
+        when(userInfoService.getAuthorities(any())).thenReturn(authorities);
         UserInfo savedUserInfo = new UserInfo();
         savedUserInfo.setUsername(username);
         savedUserInfo.setAuthType(AuthType.SAML);
@@ -291,12 +279,7 @@ class UserServiceImplTest {
         existingUserInfo.setAuthType(AuthType.SAML);
         
         when(userInfoService.getUserInfo(anyString(), eq(AuthType.SAML))).thenReturn(existingUserInfo);
-        List<GrantedAuthority> authorities = List.of(
-                (GrantedAuthority) () -> Constant.ROLE_SUPERADMIN
-        );
 
-        //Mockito.when(authentication.getAuthorities()).thenReturn((List) authorities);
-        
         // Act
         ServiceResponse result = userService.saveUserInfo(username);
         
